--- a/bt.csproj
+++ b/bt.csproj
@@ -51,21 +51,20 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionNode.cs" />
-    <Compile Include="CompositeNode.cs" />
-    <Compile Include="ConditionNode.cs" />
-    <Compile Include="INode.cs" />
+    <Compile Include="bt\ActionNode.cs" />
+    <Compile Include="bt\BtRoot.cs" />
+    <Compile Include="bt\BtTools.cs" />
+    <Compile Include="bt\CompositeNode.cs" />
+    <Compile Include="bt\ConditionNode.cs" />
+    <Compile Include="bt\INode.cs" />
+    <Compile Include="bt\RandomNode.cs" />
+    <Compile Include="bt\SelectNode.cs" />
+    <Compile Include="bt\SequenceNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectNode.cs" />
-    <Compile Include="SequenceNode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
